--- a/index.html
+++ b/index.html
@@ -110,23 +110,40 @@
               <div class="flex">
                 <div class="input-wrapper flex-2">
                   <label for="street">Rua</label>
-                  <input type="text" name="street" id="street" value="Rua das flores" disabled/>
+                  <input
+                    type="text"
+                    name="street"
+                    id="street"
+                    value="Rua das flores"
+                    disabled
+                  />
                 </div>
                 <div class="input-wrapper flex-1">
                   <label for="number">Número</label>
-                  <input type="number" name="number" id="number" value="123"/>
+                  <input type="number" name="number" id="number" value="123" />
                 </div>
               </div>
               <div class="flex">
                 <div class="input-wrapper flex-2">
                   <label for="city">Cidade</label>
-                  <input type="text" name="city" id="city" value="São Paulo" disabled/>
+                  <input
+                    type="text"
+                    name="city"
+                    id="city"
+                    value="São Paulo"
+                    disabled
+                  />
                 </div>
                 <div class="input-wrapper flex-1">
                   <label for="state">Estado</label>
-                  <input type="text" name="state" id="state" value="SP" disabled />
+                  <input
+                    type="text"
+                    name="state"
+                    id="state"
+                    value="SP"
+                    disabled
+                  />
                 </div>
-
               </div>
             </fieldset>
             <fieldset class="gardian">
@@ -134,20 +151,30 @@
 
               <div class="input-wrapper">
                 <label for="gardian">Nome do responsável</label>
-                <input type="text" id="gardian" name="gardian"/>
-                <small>Principal responsável legal e contato de emergência</small>
+                <input type="text" id="gardian" name="gardian" />
+                <small
+                  >Principal responsável legal e contato de emergência</small
+                >
               </div>
 
               <div class="input-wrapper">
                 <label for="phone">Telefone</label>
-                <input type="tel" name="phone" id="phone" placeholder="(10) 9 8765-4567" />
+                <input
+                  type="tel"
+                  name="phone"
+                  id="phone"
+                  placeholder="(10) 9 8765-4567"
+                />
               </div>
 
               <div class="input-wrapper">
                 <label for="mail">Email</label>
-                <input type="email" name="mail" id="mail" required>
+                <input type="email" name="mail" id="mail" required />
                 <div class="error">
-                  <img src="assets/icons/alert-circle.svg" alt="ícone de alerta vermelho">
+                  <img
+                    src="assets/icons/alert-circle.svg"
+                    alt="ícone de alerta vermelho"
+                  />
                   <span>Insira um e-mail válido</span>
                 </div>
               </div>
@@ -162,62 +189,110 @@
                 <div class="radio-wrapper">
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="study-shift" value="morning" id="morning">
-                    <img src="assets/icons/sun-cloud-02.svg" alt="ícone de sol com nuvem">
+                    <input
+                      type="radio"
+                      name="study-shift"
+                      value="morning"
+                      id="morning"
+                    />
+                    <img
+                      src="assets/icons/sun-cloud-02.svg"
+                      alt="ícone de sol com nuvem"
+                    />
                     <label for="morning">Manhã</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="study-shift" value="evening" id="evening">
-                    <img src="assets/icons/sun-02.svg" alt="ícone de sol">
+                    <input
+                      type="radio"
+                      name="study-shift"
+                      value="evening"
+                      id="evening"
+                    />
+                    <img src="assets/icons/sun-02.svg" alt="ícone de sol" />
                     <label for="evening">Tarde</label>
                   </div>
                 </div>
               </div>
 
               <div class="input-wrapper">
-                <label>Em qual esporte você gostaria de inscrever seu filho? </label>
+                <label
+                  >Em qual esporte você gostaria de inscrever seu filho?
+                </label>
 
                 <div class="radio-wrapper">
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="sport" id="football">
-                    <img src="assets/icons/football.svg" alt="Ícone de futebol">
+                    <input type="radio" name="sport" id="football" />
+                    <img
+                      src="assets/icons/football.svg"
+                      alt="Ícone de futebol"
+                    />
                     <label for="football">Futebol</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="sport" id="basketball">
-                    <img src="assets/icons/basketball-02.svg" alt="Ícone de basquete">
+                    <input type="radio" name="sport" id="basketball" />
+                    <img
+                      src="assets/icons/basketball-02.svg"
+                      alt="Ícone de basquete"
+                    />
                     <label for="basketball">Basquete</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="sport" id="swimming">
-                    <img src="assets/icons/swimming.svg" alt="Ícone de natação">
+                    <input type="radio" name="sport" id="swimming" />
+                    <img
+                      src="assets/icons/swimming.svg"
+                      alt="Ícone de natação"
+                    />
                     <label for="swimming">Natação</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="sport" id="yoga">
-                    <img src="assets/icons/yoga-02.svg" alt="Ícone de yoga">
+                    <input type="radio" name="sport" id="yoga" />
+                    <img src="assets/icons/yoga-02.svg" alt="Ícone de yoga" />
                     <label for="yoga">Yoga</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="sport" id="volleyball">
-                    <img src="assets/icons/volleyball.svg" alt="Ícone de volleyball">
+                    <input type="radio" name="sport" id="volleyball" />
+                    <img
+                      src="assets/icons/volleyball.svg"
+                      alt="Ícone de volleyball"
+                    />
                     <label for="volleyball">Volley</label>
                   </div>
                   <div class="radio-inner">
                     <div class="radio-image"></div>
-                    <input type="radio" name="sport" id="boxing">
-                    <img src="assets/icons/boxing-glove-01.svg" alt="Ícone de boxing">
+                    <input type="radio" name="sport" id="boxing" />
+                    <img
+                      src="assets/icons/boxing-glove-01.svg"
+                      alt="Ícone de boxing"
+                    />
                     <label for="boxing">Box</label>
                   </div>
                 </div>
               </div>
             </fieldset>
+
+            <div class="terms-wrapper input-wrapper checkbox-wrapper">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" name="terms" id="terms" />
+              <label for="terms">
+                Declaro que li e concordo com os
+                <strong>Termos e Condições</strong> e com a
+                <strong>Política de Privacidade</strong> da escola Estrela do
+                Amanhã</label
+              >
+            </div>
+
+            <div class="actions-wrapper">
+              <button class="btn-secondary" type="button">
+                Salvar respostas
+              </button>
+              <button class="btn-primary" type="submit">Fazer matrícula</button>
+            </div>
           </form>
         </div>
       </main>
